# trustme

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.rst  appveyor.yml  ci.sh  docs-requirements.in  docs-requirements.txt  lint-requirements.in  lint-requirements.txt  lint.sh  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.in  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml
ci/: rtd-requirements.in  rtd-requirements.txt  travis.sh
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  trustme-trio-example.py
docs/source/_templates/: need-help.html
faketlscerts/: __init__.py
newsfragments/: 10.bug  107.feature  11.misc  12.misc  126.feature  152.feature  17.bugfix  18.bugfix  19.feature  27.feature  293.feature.rst  3.feature  30.feature  33.feature  339.feature.rst  34.feature  346.removal.rst  35.feature  41.bugfix.rst  45.bugfix.rst  47.bugfix.rst  559.ecdsa.rst  609.feature.rst  620.feature.rst  642.bugfix.rst  670.bugfix.rst
src/trustme/: __init__.py  _cli.py  _version.py
tests/: test_cli.py  test_trustme.py
trustme/: __init__.py  __main__.py  _cli.py  _version.py
