[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustme"
dynamic = ["version"]
description = "#1 quality TLS certs while you wait, for the discerning tester"
readme = "README.rst"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.9"
authors = [
    { name = "Nathaniel J. Smith", email = "njs@pobox.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=3.1",
    "idna>=2.0",
]

[project.urls]
Homepage = "https://github.com/python-trio/trustme"

[tool.hatch.version]
path = "src/trustme/_version.py"


[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/src",
  "/tests",
  "/test-requirements.txt",
  "/README.rst",
  "/LICENSE",
  "/LICENSE.APACHE2",
  "/LICENSE.MIT",
]



[tool.towncrier]
# Usage:
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc"; misc gets no text, we can
#    customize this)
# - At release time after bumping version number, run: towncrier
#   (or towncrier --draft)
# - Make sure to use a version with the PRs mentioned below merged.
#   You probably want https://github.com/hawkowl/towncrier/pull/69 too.
#   Right now on my laptop it's
#     PYTHONPATH=~/src/towncrier/src ~/src/towncrier/bin/towncrier
#   with the merge-64-66-69 branch checked out.
package = "trustme"
package_dir = "src"
filename = "docs/source/index.rst"
directory = "newsfragments"
# Requires https://github.com/hawkowl/towncrier/pull/64
underlines = ["-", "~", "^"]
# Requires https://github.com/hawkowl/towncrier/pull/66
issue_format = "`#{issue} <https://github.com/python-trio/trustme/issues/{issue}>`__"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
omit = ["*/trustme/__main__.py"]
source = ["trustme"]

[tool.coverage.paths]
source = ["src/trustme", "*/trustme", "*\\trustme"]

[tool.coverage.setup]
precision = 1
exclude_lines = [
  "pragma: no cover.*",
  "if TYPE_CHECKING:"
]
